Update nos arquivos 2.0

--- a/main.html
+++ b/main.html
@@ -18,11 +18,14 @@
             <div class="toggle">
                 <div class="toggle-panel toggle-right">
                     <h1>
-                        PAGINA PRINCIPAL
+                        REGRESSÃO LINEAR
                     </h1>
                     <p>
-                        Aqui ficará a Pagina Principal
+                        Visualização da regressão!
                     </p>
+                    <button id="button-grafico">Gráfico</button>
+                    <button id="button-linha">Linha</button>
+                    <button id="button-colunas">Colunas</button>
 					<button class="hidden" onclick="window.location.href='/logout'">Sair</button>
                 </div>
             </div>
